src/components/struct/layout.css
:root {

	--box_default_design: 0;
	
	/* font palette  */
	--font_title: "lunatix", "oso-serif-variable", Arial, Helvetica, sans-serif, serif;
  --font_current: "din-2014", Arial, Helvetica, sans-serif, serif;
	/* color palette */
	--color_0: black;
	--color_1: white;

  --color_2: magenta;
	--color_3: yellow;
	--color_4: cyan;
	--color_5: darkmagenta;
	--color_6: indigo;


	/* the app color */
	--color_text_dark: var(--color_5);
	--color_text_light: var(--color_3);

	--color_text_title: var(--color_2);
	--color_text_current: var(--color_5);

	--color_global: var(--color_3);

	--color_line: var(--color_2);

	--color_header: var(--color_3);
	--color_menu_big: var(--color_3);
	--color_menu_small: var(--color_3);

	--color_footer: var(--color_2);

	--color_bg_form: var(--color_2);

	--color_button: var(--color_2);

	--layout_bg: var(--color_3);

	--screen_min: 600px;

	--height_header: 48px;
	--size_header_cell: 30px;
	--height_header_cell: 30px;
	--width_header_cell: 100px;
	--width_header_max: 700px;

	--width_content_max: 800px;
}

body {
  font-family: var(--font_current);
  background: var(--color_global);
	color: var(--color_text_current);
  margin: 0px;
	font-size: 1em;
}

:focus-visible {
  outline: 2px solid var(--color_5);
  outline-offset: 2px;
}

.skip-link {
  position: absolute;
  top: -3rem;
  left: 0.5rem;
  background: var(--color_5);
  color: var(--color_3);
  padding: 0.5rem 1rem;
  z-index: 100;
  transition: top 0.1s;
}
.skip-link:focus {
  top: 0.5rem;
}


input {
  background: var(--color_bg_form);
	color: var(--color_text_light);
  box-sizing: border-box;
  padding: 0.3em;
  margin: 0.3em;
}

input[type="text"] {
  width: 25em;
}

input[type="email"] {
  width: 20em;
}

input[type="password"] {
  width: 20em;
}

textarea {
  background: var(--color_bg_form);
	color: var(--color_text_light);
	padding: 0.3em;
  margin: 0.3em;
  width: 25em;
  height: 10em;
}

.header {
	background: var(--color_header);
	color:var(--color_text_title);
	height: var(--height_header);
	max-width: var(--width_header_max);
	margin: 0 auto;
}

h1, h2, h3, h4, h5, h6 {
	font-family: var(--font_title);
	color:var(--color_text_title);
}

h1 {
	font-size: 2.75em;
}

h2 {
	font-size: 1.75em;
}

h3, h4, h5, h6 {
	font-size: 1.5em;
}


@media only screen and (max-width: 480px) {
	p {
		font-size: 0.95em;
	}
  h1 {
		font-size: 2.25em;
	}
	
	h2 {
		font-size: 1.5em;
	}
	
	h3, h4, h5, h6 {
		font-size: 1.2em;
	}
}

